Implementação completa dos requisitos Front-end Design e Web Development
- Adicionado consumo de JSON local (TournamentsFromJSON)
- Criada página de Dashboard com gráficos dinâmicos
- Implementado CSS Grid em múltiplas áreas
- Melhorada estrutura semântica HTML5
- Adicionados eventos interativos e manipulação de DOM
- Configurado deploy para Vercel
- Melhorada responsividade em todas as páginas
- Adicionados comentários e documentação

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="/src/img/futebol-americano.png" type="image/x-icon">
-    <title>Passa a Bola</title>
+    <meta name="description" content="Passa a Bola - Plataforma dedicada ao futebol feminino. Cadastre seu time, acompanhe torneios e conecte-se com jogadoras e fãs em todo o país." />
+    <meta name="keywords" content="futebol feminino, torneios, times, jogadoras, esporte" />
+    <meta name="author" content="Passa a Bola" />
+    <link rel="icon" type="image/png" href="/src/img/futebol-americano.png" />
+    <link rel="shortcut icon" href="/src/img/futebol-americano.png" type="image/x-icon" />
+    <title>Passa a Bola - Valorizando o Futebol Feminino</title>
   </head>
   <body>
     <div id="root"></div>
